--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <nav class="header-nav">
             <div class="web-logo">
             <a href="https://github.com/" class="web-logo link"> <svg class="social-svg" width="73" height="29">
-                <use href="/html/images/icons.svg#icon-github"></use>
+                <use href="images/icons.svg#icon-github"></use>
               </svg>
             </a>
             </div>
@@ -71,7 +71,7 @@
               <li class="brands-item">
                 <div class="brands-background">              
                   <svg class="brands-svg" width="127" height="119">
-                    <use href="/html/images/icons.svg#icon-chart-pie-3-svgrepo-com"></use>
+                    <use href="images/icons.svg#icon-chart-pie-3-svgrepo-com"></use>
                   </svg>
                 </div>
                 <h3 class="brands-aftertitle">Set a target</h3>
@@ -83,7 +83,7 @@
               <li class="brands-item">
                 <div class="brands-background">
                 <svg class="brands-svg" width="127" height="119">
-                  <use href="/html/images/icons.svg#icon-presentation-chart-4-svgrepo-com"></use>
+                  <use href="images/icons.svg#icon-presentation-chart-4-svgrepo-com"></use>
                 </svg>
                 </div>
                 <h3 class="brands-aftertitle">Design a solution</h3>
@@ -95,7 +95,7 @@
               <li class="brands-item">
                 <div class="brands-background">
                 <svg class="brands-svg" width="127" height="119">
-                  <use href="/html/images/icons.svg#icon-presentation-detail-svgrepo-com"></use>
+                  <use href="images/icons.svg#icon-presentation-detail-svgrepo-com"></use>
                 </svg>
                 </div>
                 <h3 class="brands-aftertitle">Track the process</h3>
@@ -115,47 +115,47 @@
             <h2 class="projects-title">Recent projects</h2>
             <ul class="projects-list list">
               <li class="project-item">
-                <img src="/html/images/image-one.jpg" alt="woods" class="projects-img" />
+                <img src="images/image-one.jpg" alt="woods" class="projects-img" />
                 <h3 class="projects-name">woods</h3>
                 <p class="projects-text">Photography</p>
               </li>
               <li class="project-item">
-                <img src="/html/images/image.two.jpg" alt="woods" class="projects-img" />
+                <img src="images/image.two.jpg" alt="woods" class="projects-img" />
                 <h3 class="projects-name">path</h3>
                 <p class="projects-text">Website • Photography</p>
               </li>
               <li class="project-item">
-                <img src="/html/images/image.three.jpg" alt="darkness" class="projects-img" />
+                <img src="images/image.three.jpg" alt="darkness" class="projects-img" />
                 <h3 class="projects-name">darkness</h3>
                 <p class="projects-text">Website</p>
               </li>
               <li class="project-item">
-                <img src="/html/images/image.four.jpg" alt="waves" class="projects-img" />
+                <img src="images/image.four.jpg" alt="waves" class="projects-img" />
                 <h3 class="projects-name">waves</h3>
                 <p class="projects-text">Photography</p>
               </li>
               <li class="project-item">
-                <img src="/html/images/image.five.jpg" alt="drops" class="projects-img" />
+                <img src="images/image.five.jpg" alt="drops" class="projects-img" />
                 <h3 class="projects-name">drops</h3>
                 <p class="projects-text">Website</p>
               </li>
               <li class="project-item">
-                <img src="/html/images/image.six.jpg" alt="ocean" class="projects-img" />
+                <img src="images/image.six.jpg" alt="ocean" class="projects-img" />
                 <h3 class="projects-name">ocean</h3>
                 <p class="projects-text">Website</p>
               </li>
               <li class="project-item">
-                <img src="/html/images/image.seven.jpg" alt="town" class="projects-img" />
+                <img src="images/image.seven.jpg" alt="town" class="projects-img" />
                 <h3 class="projects-name">town</h3>
                 <p class="projects-text">Website</p>
               </li>
               <li class="project-item">
-                <img src="/html/images/image.eight.jpg" alt="mountain" class="projects-img" />
+                <img src="images/image.eight.jpg" alt="mountain" class="projects-img" />
                 <h3 class="projects-name">mountain</h3>
                 <p class="projects-text">Website</p>
               </li>
               <li class="project-item">
-                <img src="/html/images/image-nine.jpg" alt="camera" class="projects-img" />
+                <img src="images/image-nine.jpg" alt="camera" class="projects-img" />
                 <h3 class="projects-name">camera</h3>
                 <p class="projects-text">Website</p>
               </li>
@@ -171,7 +171,7 @@
             <ul class="team-list list">
               <li class="team-item">
                 <img 
-                  src="/html/images/ron.jpg" 
+                  src="images/ron.jpg" 
                   alt="ron-swanson" 
                   class="team-img" 
                   />
@@ -182,20 +182,20 @@
                 <li class="team-soc-item">
                 <a href="https://twitter.com/" class="team-soc-link link">
                   <svg class="team-soc-icon" width="15" height="15">
-                    <use href="/html/images/icons.svg#icon-twitter"></use>
+                    <use href="images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="team-soc-item">
                 <a href="https://www.linkedin.com" class="team-soc-link link"
                   ><svg class="team-soc-icon" width="15" height="15">
-                    <use href="/html/images/icons.svg#icon-linkedin2"></use></svg>
+                    <use href="images/icons.svg#icon-linkedin2"></use></svg>
                 </a>
               </li>
               <li class="team-soc-item">
                 <a href="https://mail.google.com/mail/u/0/#inbox?compose=new" class="team-soc-link link">
                   <svg class="team-soc-icon" width="15" height="15">
-                    <use href="/html/images/icons.svg#icon-email-small"></use>
+                    <use href="images/icons.svg#icon-email-small"></use>
                   </svg>
                 </a>
               </li>
@@ -203,7 +203,7 @@
               </div>
               </li>
               <li class="team-item">
-                <img src="/html/images/julia.jpg" 
+                <img src="images/julia.jpg" 
                 alt="julia-depish" 
                 class="team-img" 
                 />
@@ -213,20 +213,20 @@
                     <li class="team-soc-item">
                       <a href="https://twitter.com/" class="team-soc-link link">
                         <svg class="team-soc-icon" width="15" height="15">
-                          <use href="/html/images/icons.svg#icon-twitter"></use>
+                          <use href="images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="team-soc-item">
                       <a href="https://www.linkedin.com" class="team-soc-link link"
                         ><svg class="team-soc-icon" width="15" height="15">
-                          <use href="/html/images/icons.svg#icon-linkedin2"></use></svg>
+                          <use href="images/icons.svg#icon-linkedin2"></use></svg>
                       </a>
                     </li>
                     <li class="team-soc-item">
                       <a href="https://mail.google.com/mail/u/0/#inbox?compose=new" class="team-soc-link link">
                         <svg class="team-soc-icon" width="15" height="15">
-                          <use href="/html/images/icons.svg#icon-email-small"></use>
+                          <use href="images/icons.svg#icon-email-small"></use>
                         </svg>
                       </a>
                     </li>
@@ -234,7 +234,7 @@
               </li>
               <li class="team-item">
                 <img 
-                src="/html/images/danny.jpg" 
+                src="images/danny.jpg" 
                 alt="danny-devry" 
                 class="team-img" 
                 />
@@ -245,34 +245,34 @@
                     <li class="team-soc-item">
                     <a href="https://www.instagram.com" class="team-soc-link link">
                       <svg class="team-soc-icon" width="15" height="15">
-                        <use href="/html/images/icons.svg#icon-instagram"></use>
+                        <use href="images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-soc-item">
                     <a href="https://twitter.com/" class="team-soc-link link">
                       <svg class="team-soc-icon" width="15" height="15">
-                        <use href="/html/images/icons.svg#icon-twitter"></use>
+                        <use href="images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-soc-item">
                     <a href="https://www.behance.net" class="team-soc-link link"
                       ><svg class="team-soc-icon" width="15" height="15">
-                        <use href="/html/images/icons.svg#icon-behance"></use></svg>
+                        <use href="images/icons.svg#icon-behance"></use></svg>
                     </a>
                   </li>
                   <li class="team-soc-item">
                     <a href="https://dribbble.com" class="team-soc-link link">
                       <svg class="team-soc-icon" width="15" height="15">
-                        <use href="/html/images/icons.svg#icon-dribbble"></use>
+                        <use href="images/icons.svg#icon-dribbble"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-soc-item">
                     <a href="https://mail.google.com/mail/u/0/#inbox?compose=new" class="team-soc-link link">
                       <svg class="team-soc-icon" width="15" height="15">
-                        <use href="/html/images/icons.svg#icon-email-small"></use>
+                        <use href="images/icons.svg#icon-email-small"></use>
                       </svg>
                     </a>
                   </li>
@@ -280,7 +280,7 @@
              </div>
               <li class="team-item">
                 <img 
-                src="/html/images/lisa.jpg" 
+                src="images/lisa.jpg" 
                 alt="lisa-smith" 
                 class="team-img" />
                 <h3 class="team-aftertitle">lisa smith</h3>
@@ -289,20 +289,20 @@
                   <li class="team-soc-item">
                     <a href="https://www.facebook.com/index.php" class="team-soc-link link">
                       <svg class="team-soc-icon" width="15" height="15">
-                        <use href="/html/images/icons.svg#icon-facebook"></use>
+                        <use href="images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-soc-item">
                     <a href="https://twitter.com" class="team-soc-link link">
                        <svg class="team-soc-icon" width="15" height="15">
-                        <use href="/html/images/icons.svg#icon-twitter"></use></svg>
+                        <use href="images/icons.svg#icon-twitter"></use></svg>
                     </a>
                   </li>
                   <li class="team-soc-item">
                     <a href="https://mail.google.com/mail/u/0/#inbox?compose=new" class="team-soc-link link">
                       <svg class="team-soc-icon" width="15px" height="15">
-                        <use href="/html/images/icons.svg#icon-email-small"></use>
+                        <use href="images/icons.svg#icon-email-small"></use>
                       </svg>
                     </a>
                   </li>
@@ -319,7 +319,7 @@
                     <h2 class="footer-heading">LET’s Get in touch</h1>
                     <div class="footer-block">
                          <div class="footer-block-content">
-                              <img class="footer-block-img" src="/html/images/place.svg" alt="MEET US IN PERSON" width="44" height="65">
+                              <img class="footer-block-img" src="images/place.svg" alt="MEET US IN PERSON" width="44" height="65">
                               <h2 class="footer-block-heading">MEET US IN PERSON</h2>
                               <a href="https://www.google.com/maps/place/Ontario,+Canada/@48.9553365,-93.7055695,5z/data=!3m1!4b1!4m5!3m4!1s0x4cce05b25f5113af:0x70f8425629621e09!8m2!3d51.253775!4d-85.323214" class="place">
                               <p class="footer-block-text-two">8776 Juniper Street</p>
@@ -329,7 +329,7 @@
                               </a>
                          </div>
                          <div class="footer-block-content">
-                              <img class="footer-block-img" src="/html/images/mail.svg" alt="The traditional way" width="70" height="50">
+                              <img class="footer-block-img" src="images/mail.svg" alt="The traditional way" width="70" height="50">
                               <h2 class="footer-block-heading">The traditional way</h2>
                               <p class="footer-block-text">Email us</p>
                               <a href="mailto:contact@minimal.com" class="email">
@@ -339,25 +339,25 @@
                               <p class="footer-block-text">Scroll down</p>
                          </div>
                          <div class="footer-block-content-one">
-                              <img class="footer-block-img-one" src="/html/images/contact.svg" alt="Let’s get social" width="68" height="56">
+                              <img class="footer-block-img-one" src="images/contact.svg" alt="Let’s get social" width="68" height="56">
                               <h2 class="footer-block-heading-one">Let’s get social</h2>
                                    <div class="footer-block-list-link">
                                         <a class="footer-block-link" href="https://www.facebook.com/index.php">
                                         
-                                             <img class="footer-block-messanger" src="/html/images/facebook.svg" alt="Facebook" width="14" height="14">
+                                             <img class="footer-block-messanger" src="images/facebook.svg" alt="Facebook" width="14" height="14">
                                              <p class="footer-block-text-two footer-text">Facebook</p>
                                         </a>
                                    </div>
                                    <div class="footer-block-list-link">
                                         <a class="footer-block-link" href="https://twitter.com">
                                         
-                                             <img class="footer-block-messanger" src="/html/images/twitter.svg" alt="Twitter" width="14" height="14">
+                                             <img class="footer-block-messanger" src="images/twitter.svg" alt="Twitter" width="14" height="14">
                                              <p class="footer-block-text-two footer-text">Twitter</p>
                                         </a>
                                    </div>
                                    <div class="footer-block-list-link">
                                         <a class="footer-block-link" href="https://www.linkedin.com">
-                                             <img class="footer-block-messanger" src="/html/images/in.svg" alt="Linkdin" width="14" height="14">
+                                             <img class="footer-block-messanger" src="images/in.svg" alt="Linkdin" width="14" height="14">
                                              <p class="footer-block-text-two footer-text">Linkdin</p>
                                         </a>
                                    </div>
@@ -380,7 +380,7 @@
                       <button class="button" type="submit">Send Message</button>
                 </form>
                       <div class="footer-box-bottom">
-                           <a class="footer-box-link" href="#"><img class="footer-box-img" src="/html/images/logo-footer.svg" alt="logo-footer" width="43" height="46"></a>
+                           <a class="footer-box-link" href="#"><img class="footer-box-img" src="images/logo-footer.svg" alt="logo-footer" width="43" height="46"></a>
                            <p class="footer-box-text">Minimal Template made in Webflow. All rights reserved.</p>
                       </div>
             </div>
