--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <nav class="header-nav">
             <div class="web-logo">
             <a href="https://github.com/" class="web-logo link"> <svg class="social-svg" width="73" height="29">
-                <use href="/images/icons.svg#icon-github"></use>
+                <use href="images/icons.svg#icon-github"></use>
               </svg>
             </a>
             </div>
@@ -71,7 +71,7 @@
               <li class="brands-item">
                 <div class="brands-background">              
                   <svg class="brands-svg" width="127" height="119">
-                    <use href="/images/icons.svg#icon-chart-pie-3-svgrepo-com"></use>
+                    <use href="images/icons.svg#icon-chart-pie-3-svgrepo-com"></use>
                   </svg>
                 </div>
                 <h3 class="brands-aftertitle">Set a target</h3>
@@ -83,7 +83,7 @@
               <li class="brands-item">
                 <div class="brands-background">
                 <svg class="brands-svg" width="127" height="119">
-                  <use href="/images/icons.svg#icon-presentation-chart-4-svgrepo-com"></use>
+                  <use href="images/icons.svg#icon-presentation-chart-4-svgrepo-com"></use>
                 </svg>
                 </div>
                 <h3 class="brands-aftertitle">Design a solution</h3>
@@ -95,7 +95,7 @@
               <li class="brands-item">
                 <div class="brands-background">
                 <svg class="brands-svg" width="127" height="119">
-                  <use href="/images/icons.svg#icon-presentation-detail-svgrepo-com"></use>
+                  <use href="images/icons.svg#icon-presentation-detail-svgrepo-com"></use>
                 </svg>
                 </div>
                 <h3 class="brands-aftertitle">Track the process</h3>
